--- a/Modulo2_Solution/css/styles.css
+++ b/Modulo2_Solution/css/styles.css
@@ -152,8 +152,18 @@ div {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 
 	{float: left}
 
+	#box1 {
+float: left; bottom: 10px;
+
+}
+
+	#box2 {
+float: left; bottom: 10px;
+
+}
+
 	#box3 {
-float: left;
+float: left; bottom: 10px;
 
 	
 }
